# OpticXT

./: .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CUDA_DEBUG_GUIDE.md  Cargo.toml  DOCUMENTATION_UPDATES.md  README.md  TOOL_CALLING_STATUS.md  config.toml  debug_cuda.sh  demo.sh  output.md  setup.sh  setup_cuda.ps1  setup_cuda.sh  test.ipynb  test_model.rs  test_model_performance.sh  test_uqff.rs  test_vision_pipeline.rs  vulnerabilities.md
.github/workflows/: ci.yml  comprehensive-tests.yml  release.yml  status-check.yml
docs/: API_DOCUMENTATION.md  CUDA_BUILD_GUIDE.md  REMOTE_MODEL_IMPLEMENTATION.md
examples/: example_api_client.py  remote_model_examples.toml  test_uqff_model.rs
prompts/: system_prompt.txt
scripts/: test_api.sh  test_tool_format.sh
src/: api.rs  audio.rs  camera.rs  commands.rs  config.rs  context.rs  go2.rs  go2_basic.rs  go2_mock.rs  lib.rs  main.rs  models.rs  models_new.rs  models_old.rs  pipeline.rs  remote_model.rs  test_camera_vision.rs  test_image.rs  test_multimodal.rs  test_simple.rs  test_uqff.rs  tests.rs  video_chat.rs  vision.rs  vision_basic.rs  vision_mock.rs
tests/: integration_tests.rs  test_camera_vision.rs  test_image.rs  test_model.rs  test_multimodal.rs  test_remote_model.rs  test_simple.rs  test_vision_flow.rs  test_vision_pipeline.rs  tests.rs
