[package]
name = "opticxt"
version = "0.1.0"
edition = "2021"
authors = ["Josh-XT <josh@josh-xt.com>"]
description = "Vision-Driven Autonomous Robot Control System with GPU-Accelerated ISQ Inference"
license = "MIT"
repository = "https://github.com/Josh-XT/OpticXT"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Computer Vision and Image Processing - using compatible versions with mistralrs
image = "0.25"  # Updated to match mistralrs requirements

# Video processing and camera input
nokhwa = { version = "0.10", features = ["input-v4l"] }

# Machine Learning with ISQ support - using mistral.rs for GPU-accelerated inference
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", default-features = false }
hf-hub = "0.3"  # For automatic model downloading
either = "1.9"  # Required by mistral.rs

# Serialization for OpenAI-style tool calls
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# Real-time processing
crossbeam = "0.8"
parking_lot = "0.12"
rand = "0.8"  # For benchmark simulation

# Audio processing for voice input/output
rodio = "0.17"  # Audio playback
cpal = "0.15"   # Cross-platform audio I/O
tts = "0.26"    # Text-to-speech

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "opticxt"
path = "src/main.rs"

[features]
default = ["cuda"]
cuda = ["mistralrs/cuda"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
